--- a/src/express/templates/category.pug
+++ b/src/express/templates/category.pug
@@ -1,10 +1,10 @@
-extends layout.pug
+extends layouts/layout.pug
 
 block content
   header.header.header--logged
     .header__wrapper
       a.header__logo.logo(href='main.html')
-        img(src='../img/logo.svg' width='179' height='34' alt='Логотип Куплю Продам')
+        img(src='/img/logo.svg' width='179' height='34' alt='Логотип Куплю Продам')
       nav.header__user-menu
         ul.header__list
           li.header__item
@@ -16,7 +16,7 @@ block content
         .search__icon
         .search__close-btn
       a.header__avatar.avatar(href='#')
-        img(src='../img/avatar.jpg' srcset='../img/avatar@2x.jpg 2x' alt='Аватар пользователя')
+        img(src='/img/avatar.jpg' srcset='/img/avatar@2x.jpg 2x' alt='Аватар пользователя')
       a.header__input(href='ticket-form.html') Вход и регистрация
   main.page-content
     section.categories-list
@@ -25,42 +25,42 @@ block content
         li.categories-list__item
           a.category-tile(href='#')
             span.category-tile__image
-              img(src='../img/cat.jpg' srcset='../img/cat@2x.jpg 2x' alt='Иконка категории')
+              img(src='/img/cat.jpg' srcset='/img/cat@2x.jpg 2x' alt='Иконка категории')
             span.category-tile__label
               | Дом
               span.category-tile__qty.js-qty 81
         li.categories-list__item
           a.category-tile.category-tile--active(href='#')
             span.category-tile__image
-              img(src='../img/cat02.jpg' srcset='../img/cat02@2x.jpg 2x' alt='Иконка категории')
+              img(src='/img/cat02.jpg' srcset='/img/cat02@2x.jpg 2x' alt='Иконка категории')
             span.category-tile__label
               | Электроника
               span.category-tile__qty.js-qty 62
         li.categories-list__item
           a.category-tile(href='#')
             span.category-tile__image
-              img(src='../img/cat03.jpg' srcset='../img/cat03@2x.jpg 2x' alt='Иконка категории')
+              img(src='/img/cat03.jpg' srcset='/img/cat03@2x.jpg 2x' alt='Иконка категории')
             span.category-tile__label
               | Одежда
               span.category-tile__qty.js-qty 106
         li.categories-list__item
           a.category-tile(href='#')
             span.category-tile__image
-              img(src='../img/cat04.jpg' srcset='../img/cat04@2x.jpg 2x' alt='Иконка категории')
+              img(src='/img/cat04.jpg' srcset='/img/cat04@2x.jpg 2x' alt='Иконка категории')
             span.category-tile__label
               | Спорт/отдых
               span.category-tile__qty.js-qty 86
         li.categories-list__item
           a.category-tile(href='#')
             span.category-tile__image
-              img(src='../img/cat05.jpg' srcset='../img/cat05@2x.jpg 2x' alt='Иконка категории')
+              img(src='/img/cat05.jpg' srcset='/img/cat05@2x.jpg 2x' alt='Иконка категории')
             span.category-tile__label
               | Авто
               span.category-tile__qty.js-qty 34
         li.categories-list__item
           a.category-tile(href='#')
             span.category-tile__image
-              img(src='../img/cat06.jpg' srcset='../img/cat06@2x.jpg 2x' alt='Иконка категории')
+              img(src='/img/cat06.jpg' srcset='/img/cat06@2x.jpg 2x' alt='Иконка категории')
             span.category-tile__label
               | Книги
               span.category-tile__qty.js-qty 92
@@ -75,7 +75,7 @@ block content
           li.tickets-list__item
             .ticket-card.ticket-card--color06
               .ticket-card__img
-                img(src='../img/item06.jpg' srcset='../img/item06@2x.jpg 2x' alt='Изображение товара')
+                img(src='/img/item06.jpg' srcset='/img/item06@2x.jpg 2x' alt='Изображение товара')
               .ticket-card__info
                 span.ticket-card__label ПРОДАМ
                 .ticket-card__categories
@@ -87,11 +87,11 @@ block content
                     span.js-sum 88 000
                     |  ₽
                 .ticket-card__desc
-                  p Продам свое старое кресло, чтобы сидеть и читать книги зимними...
+                  p Продам свое старое кресло, чтобы сидеть и читать книги зимними.
           li.tickets-list__item
             .ticket-card.ticket-card--color08
               .ticket-card__img
-                img(src='../img/item08.jpg' srcset='../img/item08@2x.jpg 2x' alt='Изображение товара')
+                img(src='/img/item08.jpg' srcset='/img/item08@2x.jpg 2x' alt='Изображение товара')
               .ticket-card__info
                 span.ticket-card__label Куплю
                 .ticket-card__categories
@@ -103,11 +103,11 @@ block content
                     span.js-sum 32 000
                     |  ₽
                 .ticket-card__desc
-                  p Куплю вот такую итальянскую кофеварку, можно любой фирмы...
+                  p Куплю вот такую итальянскую кофеварку, можно любой фирмы.
           li.tickets-list__item
             .ticket-card.ticket-card--color15
               .ticket-card__img
-                img(src='../img/item15.jpg' srcset='../img/item15@2x.jpg 2x' alt='Изображение товара')
+                img(src='/img/item15.jpg' srcset='/img/item15@2x.jpg 2x' alt='Изображение товара')
               .ticket-card__info
                 span.ticket-card__label ПРОДАМ
                 .ticket-card__categories
@@ -119,11 +119,11 @@ block content
                     span.js-sum 26 000
                     |  ₽
                 .ticket-card__desc
-                  p Продам свое старое кресло, чтобы сидеть и читать книги зимними...
+                  p Продам свое старое кресло, чтобы сидеть и читать книги зимними.
           li.tickets-list__item
             .ticket-card.ticket-card--color12
               .ticket-card__img
-                img(src='../img/item12.jpg' srcset='../img/item12@2x.jpg 2x' alt='Изображение товара')
+                img(src='/img/item12.jpg' srcset='/img/item12@2x.jpg 2x' alt='Изображение товара')
               .ticket-card__info
                 span.ticket-card__label Куплю
                 .ticket-card__categories
@@ -135,11 +135,11 @@ block content
                     span.js-sum 32 000
                     |  ₽
                 .ticket-card__desc
-                  p Куплю вот такую итальянскую кофеварку, можно любой фирмы...
+                  p Куплю вот такую итальянскую кофеварку, можно любой фирмы.
           li.tickets-list__item
             .ticket-card.ticket-card--color13
               .ticket-card__img
-                img(src='../img/item13.jpg' srcset='../img/item13@2x.jpg 2x' alt='Изображение товара')
+                img(src='/img/item13.jpg' srcset='/img/item13@2x.jpg 2x' alt='Изображение товара')
               .ticket-card__info
                 span.ticket-card__label ПРОДАМ
                 .ticket-card__categories
@@ -151,11 +151,11 @@ block content
                     span.js-sum 8 000
                     |  ₽
                 .ticket-card__desc
-                  p Продам свое старое кресло, чтобы сидеть и читать книги зимними...
+                  p Продам свое старое кресло, чтобы сидеть и читать книги зимними.
           li.tickets-list__item
             .ticket-card.ticket-card--color14
               .ticket-card__img
-                img(src='../img/item14.jpg' srcset='../img/item14@2x.jpg 2x' alt='Изображение товара')
+                img(src='/img/item14.jpg' srcset='/img/item14@2x.jpg 2x' alt='Изображение товара')
               .ticket-card__info
                 span.ticket-card__label Куплю
                 .ticket-card__categories
@@ -167,11 +167,11 @@ block content
                     span.js-sum 32000
                     |  ₽
                 .ticket-card__desc
-                  p Куплю вот такую итальянскую кофеварку, можно любой фирмы...
+                  p Куплю вот такую итальянскую кофеварку, можно любой фирмы.
           li.tickets-list__item
             .ticket-card.ticket-card--color10
               .ticket-card__img
-                img(src='../img/item10.jpg' srcset='../img/item10@2x.jpg 2x' alt='Изображение товара')
+                img(src='/img/item10.jpg' srcset='/img/item10@2x.jpg 2x' alt='Изображение товара')
               .ticket-card__info
                 span.ticket-card__label ПРОДАМ
                 .ticket-card__categories
@@ -183,11 +183,11 @@ block content
                     span.js-sum 4000
                     |  ₽
                 .ticket-card__desc
-                  p Продам свое старое кресло, чтобы сидеть и читать книги зимними...
+                  p Продам свое старое кресло, чтобы сидеть и читать книги зимними.
           li.tickets-list__item
             .ticket-card.ticket-card--color06
               .ticket-card__img
-                img(src='../img/item06.jpg' srcset='../img/item06@2x.jpg 2x' alt='Изображение товара')
+                img(src='/img/item06.jpg' srcset='/img/item06@2x.jpg 2x' alt='Изображение товара')
               .ticket-card__info
                 span.ticket-card__label ПРОДАМ
                 .ticket-card__categories
@@ -199,7 +199,7 @@ block content
                     span.js-sum 88 000
                     |  ₽
                 .ticket-card__desc
-                  p Продам свое старое кресло, чтобы сидеть и читать книги зимними...
+                  p Продам свое старое кресло, чтобы сидеть и читать книги зимними.
         .tickets-list__pagination
           ul.pagination
             li
