--- a/src/express/templates/comments.pug
+++ b/src/express/templates/comments.pug
@@ -1,10 +1,10 @@
-extends layout.pug
+extends layouts/layout.pug
 
 block content
   header.header.header--logged
     .header__wrapper
       a.header__logo.logo(href='main.html')
-        img(src='../img/logo.svg' width='179' height='34' alt='Логотип Куплю Продам')
+        img(src='/img/logo.svg' width='179' height='34' alt='Логотип Куплю Продам')
       nav.header__user-menu
         ul.header__list
           li.header__item
@@ -16,7 +16,7 @@ block content
         .search__icon
         .search__close-btn
       a.header__avatar.avatar(href='#')
-        img(src='../img/avatar.jpg' srcset='../img/avatar@2x.jpg 2x' alt='Аватар пользователя')
+        img(src='/img/avatar.jpg' srcset='/img/avatar@2x.jpg 2x' alt='Аватар пользователя')
       a.header__input(href='ticket-form.html') Вход и регистрация
   main.page-content
     section.comments
@@ -34,7 +34,7 @@ block content
               .comment-card
                 .comment-card__header
                   a.comment-card__avatar.avatar(href='#')
-                    img(src='../img/avatar03.jpg' srcset='../img/avatar03@2x.jpg 2x' alt='Аватар пользователя')
+                    img(src='/img/avatar03.jpg' srcset='/img/avatar03@2x.jpg 2x' alt='Аватар пользователя')
                   p.comment-card__author Александр Бурый
                 .comment-card__content
                   p А что с прогоном автомобиля? Также вижу на фото зимнюю резину. А летняя идет ли впридачу?
@@ -43,7 +43,7 @@ block content
               .comment-card
                 .comment-card__header
                   a.comment-card__avatar.avatar(href='#')
-                    img(src='../img/avatar04.jpg' srcset='../img/avatar04@2x.jpg 2x' alt='Аватар пользователя')
+                    img(src='/img/avatar04.jpg' srcset='/img/avatar04@2x.jpg 2x' alt='Аватар пользователя')
                   p.comment-card__author Анатолий Хакимов
                 .comment-card__content
                   p Хочу прийти посмотреть на авто в среду. Мой телефон 89254455566. Готовы принять?
@@ -52,7 +52,7 @@ block content
               .comment-card
                 .comment-card__header
                   a.comment-card__avatar.avatar(href='#')
-                    img(src='../img/avatar02.jpg' srcset='../img/avatar02@2x.jpg 2x' alt='Аватар пользователя')
+                    img(src='/img/avatar02.jpg' srcset='/img/avatar02@2x.jpg 2x' alt='Аватар пользователя')
                   p.comment-card__author Георгий Шпиц
                 .comment-card__content
                   p Что это за рухлядь? Стыдно такое даже фотографировать, не то, что продавать.
@@ -69,7 +69,7 @@ block content
               .comment-card
                 .comment-card__header
                   a.comment-card__avatar.avatar(href='#')
-                    img(src='../img/avatar03.jpg' srcset='../img/avatar03@2x.jpg 2x' alt='Аватар пользователя')
+                    img(src='/img/avatar03.jpg' srcset='/img/avatar03@2x.jpg 2x' alt='Аватар пользователя')
                   p.comment-card__author Александр Бурый
                 .comment-card__content
                   p А что с прогоном автомобиля? Также вижу на фото зимнюю резину. А летняя идет ли впридачу?
@@ -78,7 +78,7 @@ block content
               .comment-card
                 .comment-card__header
                   a.comment-card__avatar.avatar(href='#')
-                    img(src='../img/avatar04.jpg' srcset='../img/avatar04@2x.jpg 2x' alt='Аватар пользователя')
+                    img(src='/img/avatar04.jpg' srcset='/img/avatar04@2x.jpg 2x' alt='Аватар пользователя')
                   p.comment-card__author Анатолий Хакимов
                 .comment-card__content
                   p Хочу прийти посмотреть на авто в среду. Мой телефон 89254455566. Готовы принять?
@@ -87,7 +87,7 @@ block content
               .comment-card
                 .comment-card__header
                   a.comment-card__avatar.avatar(href='#')
-                    img(src='../img/avatar02.jpg' srcset='../img/avatar02@2x.jpg 2x' alt='Аватар пользователя')
+                    img(src='/img/avatar02.jpg' srcset='/img/avatar02@2x.jpg 2x' alt='Аватар пользователя')
                   p.comment-card__author Георгий Шпиц
                 .comment-card__content
                   p Что это за рухлядь? Стыдно такое даже фотографировать, не то, что продавать.
