--- a/src/express/templates/layouts/footer.pug
+++ b/src/express/templates/layouts/footer.pug
@@ -3,16 +3,16 @@ footer.page-footer
     .page-footer__col
       a.page-footer__logo-academy(href='#' aria-label='Ссылка на сайт HTML-Академии')
         svg(width='132' height='46')
-          use(href='../img/sprite_auto.svg#logo-htmlac')
+          use(href='/img/sprite_auto.svg#logo-htmlac')
       p.page-footer__copyright © 2019 Проект Академии
     .page-footer__col
       a.page-footer__logo.logo(href='#')
-        img(src='../img/logo.svg' width='179' height='35' alt='Логотип Куплю Продам')
+        img(src='/img/logo.svg' width='179' height='35' alt='Логотип Куплю Продам')
     .page-footer__col
       ul.page-footer__nav
         li
           a(href='sign-up.html') Вход и регистрация
         li
           a(href='new-ticket.html') Создать объявление
-script(src='../js/vendor.js')
-script(src='../js/main.js')
+script(src='/js/vendor.js')
+script(src='/js/main.js')
