--- a/src/express/templates/comments.pug
+++ b/src/express/templates/comments.pug
@@ -3,12 +3,12 @@ extends layouts/layout.pug
 block content
   header.header.header--logged
     .header__wrapper
-      a.header__logo.logo(href='main.html')
+      a.header__logo.logo(href='/')
         img(src='/img/logo.svg' width='179' height='34' alt='Логотип Куплю Продам')
       nav.header__user-menu
         ul.header__list
           li.header__item
-            a(href='my-tickets.html') Публикации
+            a(href='/my') Публикации
           li.header__item.header__item--active
             a Комментарии
       form.search(method='get' action='#' autocomplete='off')
