--- a/src/express/templates/main.pug
+++ b/src/express/templates/main.pug
@@ -8,16 +8,16 @@ block content
       nav.header__user-menu
         ul.header__list
           li.header__item
-            a(href='my-tickets.html') Публикации
+            a(href='/my') Публикации
           li.header__item
-            a(href='comments.html') Комментарии
+            a(href='/my/comments') Комментарии
       form.search(method='get' action='#' autocomplete='off')
         input(type='search' name='search' placeholder='Поиск' aria-label='Поиск')
         .search__icon
         .search__close-btn
       a.header__avatar.avatar(href='#')
         img(src='/img/avatar.jpg' srcset='/img/avatar@2x.jpg 2x' alt='Аватар пользователя')
-      a.header__input(href='sign-up.html') Вход и регистрация
+      a.header__input(href='/register') Вход и регистрация
   main.page-content
     section.categories-list
       h1.visually-hidden Сервис объявлений "Куплю - продам"
