--- a/src/express/templates/my-tickets.pug
+++ b/src/express/templates/my-tickets.pug
@@ -10,7 +10,7 @@ block content
           li.header__item.header__item--active
             a Публикации
           li.header__item
-            a(href='comments.html') Комментарии
+            a(href='/my/comments') Комментарии
       form.search(method='get' action='#' autocomplete='off')
         input(type='search' name='search' placeholder='Поиск' aria-label='Поиск')
         .search__icon
