--- a/src/express/templates/ticket.pug
+++ b/src/express/templates/ticket.pug
@@ -8,9 +8,9 @@ block content
       nav.header__user-menu
         ul.header__list
           li.header__item
-            a(href='my-tickets.html') Публикации
+            a(href='/my') Публикации
           li.header__item
-            a(href='comments.html') Комментарии
+            a(href='/my/comments') Комментарии
       form.search(method='get' action='#' autocomplete='off')
         input(type='search' name='search' placeholder='Поиск' aria-label='Поиск')
         .search__icon
