--- a/src/express/templates/main.pug
+++ b/src/express/templates/main.pug
@@ -2,7 +2,11 @@ extends layout.pug
 
 block content
   main.page-content
-    include partials/categories.pug
+    section.categories-list
+      h1.visually-hidden Сервис объявлений "Куплю - продам"
+      ul.categories-list__wrapper
+        each category in categories
+          include partials/categories.pug
     section.tickets-list
       h2.visually-hidden Самые новые предложения
       .tickets-list__wrapper
