--- a/src/express/templates/main.pug
+++ b/src/express/templates/main.pug
@@ -17,7 +17,7 @@ block content
             li.tickets-list__item
               .ticket-card.ticket-card--color01
                 .ticket-card__img
-                  img(src=`/img/${offer.picture}.jpg` srcset=`/img/${offer.picture}@2x.jpg 2x` alt='Изображение товара')
+                  img(src=`/img/${offer.picture}` alt='Изображение товара')
                 .ticket-card__info
                   span.ticket-card__label= offer.type === `buy` ? `Куплю` : `Продам`
                   .ticket-card__categories
@@ -41,7 +41,7 @@ block content
             li.tickets-list__item
               .ticket-card.ticket-card--color01
                 .ticket-card__img
-                  img(src=`/img/${offer.picture}.jpg` srcset=`/img/${offer.picture}@2x.jpg 2x` alt='Изображение товара')
+                  img(src=`/img/${offer.picture}` alt='Изображение товара')
                 .ticket-card__info
                   span.ticket-card__label= offer.type === `buy` ? `Куплю` : `Продам`
                   .ticket-card__categories
