--- a/src/express/templates/my-tickets.pug
+++ b/src/express/templates/my-tickets.pug
@@ -9,16 +9,16 @@ block content
           a.tickets-list__btn.btn.btn--big(href='/offers/add')
             span Новая публикация
         ul
-          each offer in offers
+          each offer in myOffers
             li.tickets-list__item.js-card
               .ticket-card.ticket-card--color06
                 .ticket-card__img
-                  img(src=`/img/${offer.picture}.jpg` srcset=`/img/${offer.picture}@2x.jpg 2x` alt='Изображение товара')
+                  img(src=`/img/${offer.picture}` alt='Изображение товара')
                 .ticket-card__info
                   span.ticket-card__label= offer.type === `buy` ? `Куплю` : `Продам`
                   .ticket-card__categories
                     each category in offer.category
-                        a(href='#')= category
+                      a(href='#')= category
                     .ticket-card__header
                       h3.ticket-card__title
                         a(href='#')= offer.title
