--- a/src/express/templates/errors/404.pug
+++ b/src/express/templates/errors/404.pug
@@ -8,7 +8,7 @@ html.html-not-found(lang="ru")
     title= title
     link(rel='stylesheet' href='/css/style.min.css')
   body.body-not-found
-    main(style='background-color: #aa5913')
+    main
       section.error
         h1.error__title 404
         h2.error__subtitle Страница не найдена
