--- a/src/express/templates/errors/500.pug
+++ b/src/express/templates/errors/500.pug
@@ -8,7 +8,7 @@ html.html-server(lang="ru")
     title= title
     link(rel='stylesheet' href='/css/style.min.css')
   body.body-server
-    main(style='background-color: #aa5913')
+    main
       section.error
         h1.error__title 500
         h2.error__subtitle Ошибка cервера
