--- a/src/express/templates/partials/footer.pug
+++ b/src/express/templates/partials/footer.pug
@@ -3,7 +3,7 @@ footer.page-footer
     .page-footer__col
       a.page-footer__logo-academy(href='https://htmlacademy.ru/' aria-label='Ссылка на сайт HTML-Академии')
         svg(width='132' height='46')
-          use(href='/img/sprite_auto.svg#logo-htmlac')
+          use(xlink:href='/img/sprite_auto.svg#logo-htmlac')
       p.page-footer__copyright © 2019 Проект Академии
     .page-footer__col
       a.page-footer__logo.logo(href='/')
