Correcting impementation of search

--- a/src/express/templates/errors/500.pug
+++ b/src/express/templates/errors/500.pug
@@ -20,7 +20,7 @@ html.html-server(lang="ru")
           li.error__item
             a(href='/') Главная страница
         form.error__search.search.search--small(method='get' action='#' autocomplete='off')
-          input(type='search' name='search' placeholder='Поиск' aria-label='Поиск')
+          input(type='search' name='query' placeholder='Поиск' aria-label='Поиск')
           .search__icon
           .search__close-btn
         a.error__logo.logo(href='/')
