--- a/src/express/templates/offer-edit.pug
+++ b/src/express/templates/offer-edit.pug
@@ -18,30 +18,28 @@ block content
             .ticket-form__content
               .ticket-form__row
                 .form__field
-                  input#ticket-name.js-field(type='text' name='ticket-name' value=`${offer.title}` required)
+                  input#ticket-name.js-field(type='text' name='title' value=`${offer.title}` required)
                   label(for='ticket-name') Название
                   span Обязательное поле
               .ticket-form__row
                 .form__field
-                  textarea#comment-field.js-field(name='comment' cols='30' rows='10' maxlength='400' minlength='50')= offer.description
+                  textarea#comment-field.js-field(name='description' cols='30' rows='10' maxlength='400' minlength='50')= offer.description
                   label(for='comment-field') Описание
                   span Обязательное поле
               .ticket-form__row
                 select#category-field.form__select.js-multiple-select(name='category' data-label='Выбрать категорию публикации' multiple)
-                  each category in offer.category
-                    option(value='1' selected)= category
-                    option(value='3') Авто
-                    option(value='4') Электроника
+                  each category, index in categories
+                    option(value=index selected=offer.category.includes(category)) #{category}
               .ticket-form__row
                 .form__field.form__field--price
-                  input#price-field.js-field.js-price(type='number' name='price' min='1' value=`${offer.sum}` required)
+                  input#price-field.js-field.js-price(type='number' name='sum' min='1' value=`${offer.sum}` required)
                   label(for='price-field') Цена
                   span Обязательное поле
                 .form__switch.switch
                   .switch__item
-                    input#buy-field.visually-hidden(type='radio' name='action' value='buy' checked=`${offer.type === `offer` ? false : true}`)
+                    input#buy-field.visually-hidden(type='radio' name='type' value='buy' checked=(offer.type === 'buy'))
                     label.switch__button(for='buy-field') Куплю
                   .switch__item
-                    input#sell-field.visually-hidden(type='radio' name='action' value='sell' checked=`${offer.type === `offer` ? false : true}`)
+                    input#sell-field.visually-hidden(type='radio' name='type' value='sell' checked=(offer.type === 'offer'))
                     label.switch__button(for='sell-field') Продам
             button.form__button.btn.btn--medium.js-button(type='submit') Сохранить
