Implementing of /offers/:id route

--- a/src/express/templates/search-empty.pug
+++ b/src/express/templates/search-empty.pug
@@ -30,7 +30,7 @@ block content
                       a(href='#')= category
                     .ticket-card__header
                       h3.ticket-card__title
-                        a(href='#')= offer.title
+                        a(href=`/offers/${offer.id}`)= offer.title
                       p.ticket-card__price
                         span.js-sum= offer.sum
                         |  ₽
