--- a/src/express/templates/offer.pug
+++ b/src/express/templates/offer.pug
@@ -33,7 +33,7 @@ block content
                   a.category-tile.category-tile--small(href='#')
                     span.category-tile__image
                       img(src='/img/cat.jpg' srcset='/img/cat@2x.jpg 2x' alt='Иконка категории')
-                    span.category-tile__label= category
+                    span.category-tile__label= category.title
         .ticket__comments
           h2.ticket__subtitle Коментарии
           .ticket__comment-form
