--- a/src/express/templates/search-empty.pug
+++ b/src/express/templates/search-empty.pug
@@ -27,7 +27,7 @@ block content
                   span.ticket-card__label= offer.type === `buy` ? `Куплю` : `Продам`
                   .ticket-card__categories
                     each category in offer.category
-                      a(href='#')= category
+                      a(href='#')= category.title
                     .ticket-card__header
                       h3.ticket-card__title
                         a(href=`/offers/${offer.id}`)= offer.title
