Improving offerService by using 'include'

--- a/src/express/templates/my-offers.pug
+++ b/src/express/templates/my-offers.pug
@@ -17,7 +17,7 @@ block content
                 .ticket-card__info
                   +ticketLabel(offer.type)
                   .ticket-card__categories
-                    each category in offer.category
+                    each category in offer.categories
                       a(href='#')= category.title
                     .ticket-card__header
                       h3.ticket-card__title
