--- a/src/express/templates/offer.pug
+++ b/src/express/templates/offer.pug
@@ -28,7 +28,7 @@ block content
                 b Контакты:
                 a(href='mailto:shkatulkin@ya.ru')  shkatulkin@ya.ru
             ul.ticket__tags
-              each category in offer.category
+              each category in offer.categories
                 li
                   a.category-tile.category-tile--small(href='#')
                     span.category-tile__image
