--- a/src/express/templates/offer.pug
+++ b/src/express/templates/offer.pug
@@ -50,7 +50,7 @@ block content
               button.comment-form__button.btn.btn--white.js-button(type='submit' disabled) Отправить
           .ticket__comments-list
             ul.comments-list
-              each comment in comments
+              each comment in offer.comments
                 li
                   .comment-card
                     .comment-card__header
