Correcting templates for search implementation

--- a/src/express/templates/search-empty.pug
+++ b/src/express/templates/search-empty.pug
@@ -18,7 +18,7 @@ block content
           unless !moreOffersQty
             a.tickets-list__link(href='#') Еще #{moreOffersQty}
         ul
-          each offer in eightOffers
+          each offer in mostDiscussed
             li.tickets-list__item
               .ticket-card.ticket-card--color01
                 .ticket-card__img
