--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -23,7 +23,7 @@ body
 
     img(src=`/img/cat${idPadded}.jpg` srcset=`/img/cat${idPadded}@2x.jpg 2x` alt=category.name)
 
-  mixin pagination(page, totalPages, width, prefix)
+  mixin pagination(page, totalPages, width, prefix, query = ``)
     -
       let start = page - width;
       let end = page + width;
@@ -43,13 +43,13 @@ body
       ul.pagination
         if start > 1
           li
-            a(href=`${prefix}page=${page - 1}`) Назад
+            a(href=`${prefix}page=${page - 1}&query=${query}`) Назад
         while i++ < end
           li
-            a(class={active: i === page} href=`${prefix}page=${i}`)= i
+            a(class={active: i === page} href=`${prefix}page=${i}&query=${query}`)= i
         if end < totalPages
           li
-            a(href=`${prefix}page=${page + 1}`) Вперёд
+            a(href=`${prefix}page=${page + 1}&query=${query}`) Вперёд
   include partials/header.pug
   block content
   include partials/footer.pug
