--- a/src/express/templates/offer.pug
+++ b/src/express/templates/offer.pug
@@ -1,26 +1,31 @@
 extends layout.pug
 
 block content
+  -
+    const formatDate = (dateString) => {
+      const date = new Date(dateString);
+      return date.toLocaleString();
+    }
   main.page-content
     section.ticket
       .ticket__wrapper
         h1.visually-hidden Карточка объявления
         .ticket__content
           .ticket__img
-            img(src=`/img/${offer.picture}` alt='Изображение товара')
+            img(src=`/img/${offer.picture}` alt=offer.title)
           .ticket__info
             h2.ticket__title= offer.title
             .ticket__header
               p.ticket__price
                 span.js-sum= offer.sum
                 |  ₽
-              p.ticket__action= offer.type
+              p.ticket__action #{offer.type === `buy` ? `КУПЛЮ` : `ПРОДАМ`}
             .ticket__desc
-              p= offer.description
+              p #{offer.description}
             .ticket__data
               p
                 b Дата добавления:
-                span 20 ноября 2019
+                span  #{`${formatDate(offer[`created_date`])}`}
               p
                 b Автор:
                 a(href='#')  Денис Шкатулкин
@@ -32,7 +37,7 @@ block content
                 li
                   a.category-tile.category-tile--small(href='#')
                     span.category-tile__image
-                      img(src='/img/cat.jpg' srcset='/img/cat@2x.jpg 2x' alt='Иконка категории')
+                      +categoryImage(category)
                     span.category-tile__label= category.title
         .ticket__comments
           h2.ticket__subtitle Коментарии
@@ -58,4 +63,4 @@ block content
                         img(src='/img/avatar02.jpg' srcset='/img/avatar02@2x.jpg 2x' alt='Аватар пользователя')
                       p.comment-card__author Георгий Шпиц
                     .comment-card__content
-                      p= comment.text
+                      p #{comment.text}
