--- a/src/express/templates/new-offer.pug
+++ b/src/express/templates/new-offer.pug
@@ -39,6 +39,6 @@ block content
                     input#buy-field.visually-hidden(type='radio' name='action' value='buy')
                     label.switch__button(for='buy-field') Куплю
                   .switch__item
-                    input#sell-field.visually-hidden(type='radio' name='action' value='sell')
+                    input#sell-field.visually-hidden(type='radio' name='action' value='offer')
                     label.switch__button(for='sell-field') Продам
             button.form__button.btn.btn--medium.js-button(type='submit' disabled) Опубликовать
