--- a/src/express/templates/offer-edit.pug
+++ b/src/express/templates/offer-edit.pug
@@ -6,10 +6,11 @@ block content
       .ticket-form__wrapper
         h1.ticket-form__title Редактировать публикацию
         .ticket-form__tile
-          form.ticket-form__form.form(action='/offers/add' method='post' enctype='multipart/form-data' autocomplete='off')
+          form.ticket-form__form.form(action=`/offers/edit/${id}` method='post' enctype='multipart/form-data' autocomplete='off')
             .ticket-form__avatar-container.js-preview-container.uploaded
               .ticket-form__avatar.js-preview
                 img(src=`/img/${offer.picture}` alt='Изображение товара')
+              input(type="hidden" name="old-image" value=offer.picture)
               .ticket-form__field-avatar
                 input#avatar.visually-hidden.js-file-field(type='file' name='avatar')
                 label(for='avatar')
@@ -29,7 +30,7 @@ block content
               .ticket-form__row
                 select#category-field.form__select.js-multiple-select(name='categories' data-label='Выбрать категорию публикации' multiple)
                   each category in categories
-                    option(value=category.id selected=plainOfferCategories.includes(category.title)) #{category.title}
+                    option(value=category.id selected=offer.categories.some(item => item.id === category.id)) #{category.title}
               .ticket-form__row
                 .form__field.form__field--price
                   input#price-field.js-field.js-price(type='number' name='sum' min='1' value=`${offer.sum}` required)
@@ -37,9 +38,9 @@ block content
                   span Обязательное поле
                 .form__switch.switch
                   .switch__item
-                    input#buy-field.visually-hidden(type='radio' name='type' value='buy' checked=(offer.type === 'buy'))
+                    input#buy-field.visually-hidden(type='radio' name='action' value='buy' checked=(offer.type === 'buy'))
                     label.switch__button(for='buy-field') Куплю
                   .switch__item
-                    input#sell-field.visually-hidden(type='radio' name='type' value='sell' checked=(offer.type === 'offer'))
+                    input#sell-field.visually-hidden(type='radio' name='action' value='sell' checked=(offer.type === 'offer'))
                     label.switch__button(for='sell-field') Продам
             button.form__button.btn.btn--medium.js-button(type='submit') Сохранить
