--- a/src/express/templates/new-offer.pug
+++ b/src/express/templates/new-offer.pug
@@ -28,7 +28,7 @@ block content
               .ticket-form__row
                 select#category-field.form__select.js-multiple-select(name='categories' data-label='Выбрать категорию публикации')
                   each category in categories
-                    option(value=category.id) #{category.title}
+                    option(value=`${+category.id}`) #{category.title}
               .ticket-form__row
                 .form__field.form__field--price
                   input#price-field.js-field.js-price(type='number' name='sum' min='1' required)
@@ -41,4 +41,5 @@ block content
                   .switch__item
                     input#sell-field.visually-hidden(type='radio' name='action' value='offer')
                     label.switch__button(for='sell-field') Продам
+            +errorMessage(error)
             button.form__button.btn.btn--medium.js-button(type='submit' disabled) Опубликовать
