--- a/src/express/templates/offer.pug
+++ b/src/express/templates/offer.pug
@@ -28,10 +28,10 @@ block content
                 span  #{`${formatDate(offer[`created_date`])}`}
               p
                 b Автор:
-                a(href='#')  Денис Шкатулкин
+                a(href='#')  #{user.name}
               p
                 b Контакты:
-                a(href='mailto:shkatulkin@ya.ru')  shkatulkin@ya.ru
+                a(href=`mailto:${user.email}`)  #{user.email}
             ul.ticket__tags
               each category in offer.categories
                 li
@@ -45,7 +45,7 @@ block content
             form.form.comment-form(action=`/offers/${id}/comments` method='post' enctype='multipart/form-data')
               .comment-form__header
                 a.comment-form__avatar.avatar(href='#')
-                  img(src='/img/avatar.jpg' srcset='/img/avatar@2x.jpg 2x' alt='Аватар пользователя')
+                  img(src=`/img/${user.avatar}` alt='Аватар пользователя')
                 p.comment-form__author Вам слово
               .comment-form__field
                 .form__field
@@ -61,7 +61,7 @@ block content
                   .comment-card
                     .comment-card__header
                       a.comment-card__avatar.avatar(href='#')
-                        img(src='/img/avatar02.jpg' srcset='/img/avatar02@2x.jpg 2x' alt='Аватар пользователя')
-                      p.comment-card__author Георгий Шпиц
+                        img(src=`/img/${user.avatar}` alt='Аватар пользователя')
+                      p.comment-card__author= user.name
                     .comment-card__content
                       p #{comment.text}
