Inventing csurf protection

--- a/src/express/templates/new-offer.pug
+++ b/src/express/templates/new-offer.pug
@@ -10,6 +10,7 @@ block content
             .ticket-form__avatar-container.js-preview-container
               .ticket-form__avatar.js-preview
               .ticket-form__field-avatar
+                input(type='hidden' name='_csrf' value=`${csrfToken}`)
                 input#avatar.visually-hidden.js-file-field(type='file' name='avatar')
                 label(for='avatar')
                   span.ticket-form__text-upload Загрузить фото…
