--- a/src/express/templates/comments.pug
+++ b/src/express/templates/comments.pug
@@ -23,4 +23,5 @@ block content
                       p.comment-card__author  #{comment.users.name}
                     .comment-card__content
                       p= comment.text
-                    button.comment-card__delete.js-delete(type='button') Удалить
+                    form(action=`/offers/delete-comment/${comment.id}` method='post' autocomplete='off')
+                      button.comment-card__delete.js-delete(type='submit') Удалить
