Moving delete offer and comment routes to my-routes

--- a/src/express/templates/my-offers.pug
+++ b/src/express/templates/my-offers.pug
@@ -25,6 +25,6 @@ block content
                       p.ticket-card__price
                         span.js-sum= offer.sum
                         |  ₽
-                  form(action=`/offers/delete/${offer.id}` method='post' autocomplete='off')
+                  form(action=`/my/delete/${offer.id}` method='post' autocomplete='off')
                     button.ticket-card__del.js-delete(type='submit') Удалить
     +pagination(page, totalPages, 2, `?`)
