Resolving errores for postgres 14

--- a/src/express/templates/category.pug
+++ b/src/express/templates/category.pug
@@ -9,7 +9,7 @@ block content
           .tickets-list__header
             p.tickets-list__title
               | #{category.title}
-              b.js-qty  #{category.count}
+              b.js-qty  #{count}
           ul
             each offer in offers
               li.tickets-list__item
